# homeCore

./: .gitignore  .passwd  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  README.md  build.sh  devNotes.md  rulesGuide.md  tmp.md
.github/: renovate.json
.github/workflows/: canary.yml  ci.yml  release.yml
config/: glue.toml  homecore.appliance.toml  homecore.dev.toml  homecore.toml  homecore.toml.example  modes.toml
config/profiles/: zwave.toml
crates/hc-api/: Cargo.toml
crates/hc-api-types/: Cargo.toml
crates/hc-api-types/src/: api_keys.rs  auth.rs  health.rs  lib.rs
crates/hc-api/examples/: registry_sign.rs
crates/hc-api/src/: admin_uds.rs  api_key_handlers.rs  audit.rs  audit_handlers.rs  auth_handlers.rs  auth_middleware.rs  backup.rs  config_writer.rs  dashboard_store.rs  event_log.rs  group_store.rs  handlers.rs  lib.rs  logs.rs  managed_modes.rs  managed_plugins.rs  management_rpc.rs  metrics.rs  mode_definition_store.rs  plugin_config_store.rs  plugin_config_watcher.rs  plugin_install.rs  rate_limit.rs  registry.rs  rule_file_store.rs  streaming.rs  ws.rs
crates/hc-auth/: Cargo.toml
crates/hc-auth/src/: actor.rs  api_key.rs  jwt.rs  lib.rs  mqtt_creds.rs  password.rs  refresh.rs  user.rs
crates/hc-broker/: Cargo.toml
crates/hc-cli/: Cargo.toml
crates/hc-cli/src/: client.rs  config.rs  lib.rs  main.rs  output.rs
crates/hc-core/: Cargo.toml
crates/hc-core/src/: battery_watcher.rs  calendar_store.rs  device_naming.rs  engine.rs  executor.rs  lib.rs  mode_manager.rs  rule_loader.rs  rule_resolver.rs  scheduler.rs  state_bridge.rs  switch_manager.rs  timer_manager.rs
crates/hc-core/src/glue/: button.rs  config.rs  counter.rs  datetime.rs  group.rs  mod.rs  number.rs  schedule.rs  select.rs  switch.rs  text.rs  threshold.rs  timer.rs
crates/hc-influx/: Cargo.toml
crates/hc-influx/src/: config.rs  filter.rs  lib.rs  line_protocol.rs
crates/hc-logging/: Cargo.toml
crates/hc-logging/src/: broadcast_layer.rs  config.rs  filter.rs  lib.rs  rotating_writer.rs  syslog_layer.rs
crates/hc-mqtt-client/: Cargo.toml
crates/hc-mqtt-client/src/: lib.rs
crates/hc-notify/: Cargo.toml
crates/hc-notify/src/: channel.rs  email.rs  lib.rs  pushover.rs  telegram.rs
crates/hc-scripting/: Cargo.toml
crates/hc-scripting/src/: lib.rs
crates/hc-state/: Cargo.toml
crates/hc-state/src/: api_key_store.rs  audit_store.rs  battery_store.rs  device_store.rs  history.rs  lib.rs  plugin_state_store.rs  refresh_token_store.rs  rule_store.rs  schema_store.rs  user_store.rs
crates/hc-time/: Cargo.toml
crates/hc-time/src/: lib.rs
crates/hc-topic-map/: Cargo.toml
crates/hc-topic-map/src/: coerce.rs  device_types.rs  lib.rs  loader.rs  pattern.rs  profile.rs  router.rs
crates/hc-topic-map/tests/: shelly_profiles.rs
crates/hc-types/: Cargo.toml
crates/hc-types/src/: dashboard.rs  device.rs  event.rs  lib.rs  log_line.rs  mqtt.rs  plugin_capabilities.rs  rule.rs  schema.rs  vocabulary.rs
crates/hc-types/tests/: plugin_widget.rs  vocabulary.rs  vocabulary_snapshot.rs
crates/hc-web-admin/: Cargo.toml
data/: audit.db-shm  audit.db-wal  dashboards.json
docker/: appliance-entrypoint.sh  docker-compose.external-broker.yml
docs/: QuickStart.md  design_leptos_admin.scrapped.md  devNotes.md  glue-devices-plan.md  hc-web-admin-integration-plan.md  matterPlan.md  openapi.yaml  plan_leptos_ssr_admin.md  rule-vocabulary.json  rulesGuide.md  shelly.md  webDesign.md
homeCore/: Cargo.toml
homeCore/src/: main.rs
homecore/: Cargo.toml
homecore/src/: main.rs  plugin_launcher.rs
homecore/tests/: integration_test.rs
plugins/examples/http-poller/: Cargo.toml  http-poller.example.toml
plugins/examples/http-poller/src/: config.rs  main.rs  poller.rs
plugins/examples/virtual-device/: Cargo.toml
plugins/examples/virtual-device/src/: main.rs
plugins/hc-sonos/: .gitignore  Cargo.toml
plugins/hc-sonos/config/: config.toml
plugins/hc-sonos/src/: bridge.rs  config.rs  discovery.rs  homecore.rs  main.rs  speaker.rs
plugins/plugin-sdk-dotnet/: HomeCoreSdk.csproj  PluginClient.cs
plugins/plugin-sdk-js/: index.js  package-lock.json  package.json
plugins/plugin-sdk-py/: pyproject.toml
plugins/plugin-sdk-py/examples/: virtual_light.py
plugins/plugin-sdk-py/homecore_plugin_sdk/: __init__.py
plugins/plugin-sdk-py/tests/: test_plugin.py
plugins/plugin-sdk-rs/: Cargo.toml
plugins/plugin-sdk-rs/src/: lib.rs
rules/: all_deck_doors_closed.toml  all_deck_doors_closed_diningRoom.toml  all_deck_doors_closed_livingRoom.toml  any_deck_door_open.toml  bathroom_cancel_timer_on_close.ron  bathroom_cancel_timer_on_close.toml  bathroom_door_opened.ron  bathroom_door_opened.toml  bathroom_door_opens.toml  bathroom_exhaust_on_at_close.ron  bathroom_exhaust_on_at_close.toml  bathroom_play_music_afternoon.ron  bathroom_play_music_afternoon.toml  bathroom_play_music_morning.ron  bathroom_play_music_morning.toml  bathroom_timer_exhaust_off.ron  bathroom_timer_exhaust_off.toml  deck_door_closed_any.ron  deck_door_closed_any.toml  deck_door_opened_any.toml  deck_door_opened_any_night_lights.ron  deck_door_opened_any_night_lights.toml  deck_door_opened_familyRoom.toml  deck_door_opened_livingRoom.toml  door_alert_garageDeck.toml  door_alert_laundryRoom.toml  door_alert_oh1.ron  door_alert_oh1.toml  door_closed_familyRoom.toml  door_closed_garageDeck.toml  door_closed_livingRoom.toml  door_closed_living_room.toml  door_opened_diningRoom.toml  door_opened_familyRoom.toml  door_opened_garageDeck.toml  door_opened_laundryRoom.toml  door_opened_laundry_room.ron  door_opened_laundry_room.toml  door_opened_livingRoom.toml  garage_oh1_door_opens.toml  (+47 more)
rules/examples/: all_deck_doors_closed.ron  any_deck_door_open.ron  any_deck_door_open.toml  door_closed_diningRoom.ron  door_closed_diningRoom.toml  door_closed_familyRoom.ron  door_closed_familyRoom.toml  (+28 more)
scripts/: install-service.ps1  install-service.sh
src/: jwt_secret.rs  main.rs  plugin_launcher.rs  plugin_manager.rs
tests/: battery_alerts_test.rs  integration_test.rs  phase_a_e2e.rs  streaming_test.rs
(+18 files in other folders)
