[package]
name    = "homecore"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "crates/hc-types",
    "crates/hc-broker",
    "crates/hc-mqtt-client",
    "crates/hc-topic-map",
    "crates/hc-core",
    "crates/hc-state",
    "crates/hc-api",
    "crates/hc-auth",
    "crates/hc-scripting",
    "crates/hc-notify",
    "crates/hc-logging",
    "plugins/plugin-sdk-rs",
    "plugins/examples/virtual-device",
    "plugins/examples/http-poller",
]

[workspace.dependencies]
tokio             = { version = "1", features = ["full"] }
rumqttd           = "0.19"
rumqttc           = "0.24"
axum              = { version = "0.7", features = ["ws"] }
redb              = "2"
rusqlite          = { version = "0.31", features = ["bundled"] }
rhai              = { version = "1", features = ["sync"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
uuid              = { version = "1", features = ["v4", "serde"] }
chrono            = { version = "0.4", features = ["serde"] }
anyhow            = "1"
thiserror         = "1"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender   = "0.2"
ipnet              = { version = "2", features = ["serde"] }
jsonschema        = "0.18"
toml              = "0.8"
utoipa            = { version = "4", features = ["axum_extras"] }
argon2            = { version = "0.5", features = ["password-hash"] }
async-trait       = "0.1"
notify            = "6"

[dependencies]
hc-broker      = { path = "crates/hc-broker" }
hc-mqtt-client = { path = "crates/hc-mqtt-client" }
hc-state       = { path = "crates/hc-state" }
hc-core        = { path = "crates/hc-core" }
hc-auth        = { path = "crates/hc-auth" }
hc-api         = { path = "crates/hc-api" }
hc-types       = { path = "crates/hc-types" }
hc-topic-map   = { path = "crates/hc-topic-map" }
hc-notify      = { path = "crates/hc-notify" }
hc-logging     = { path = "crates/hc-logging" }
ipnet              = { workspace = true }
tokio              = { workspace = true }
serde              = { workspace = true }
toml               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
serde_json         = { workspace = true }
rumqttc            = { workspace = true }
