[package]
name        = "homecore"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "Home automation platform — MQTT-native, API-first, fully local"
repository  = "https://github.com/homeCore-io/homeCore"

[workspace]
resolver = "2"
members = [
    "crates/hc-types",
    "crates/hc-broker",
    "crates/hc-mqtt-client",
    "crates/hc-topic-map",
    "crates/hc-core",
    "crates/hc-state",
    "crates/hc-api",
    "crates/hc-web-admin",
    "crates/hc-auth",
    "crates/hc-api-types",
    "crates/hc-cli",
    "crates/hc-scripting",
    "crates/hc-notify",
    "crates/hc-logging",
]

[workspace.dependencies]
tokio             = { version = "1", features = ["full"] }
rumqttd           = "0.19"
rumqttc           = "0.24"
axum              = { version = "0.7", features = ["ws"] }
redb              = "2"
rusqlite          = { version = "0.31", features = ["bundled"] }
rhai              = { version = "1", features = ["sync"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
uuid              = { version = "1", features = ["v4", "serde"] }
chrono            = { version = "0.4", features = ["serde"] }
anyhow            = "1"
thiserror         = "1"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender   = "0.2"
ipnet              = { version = "2", features = ["serde"] }
jsonschema        = "0.18"
toml              = "0.8"
ron               = "0.8"
utoipa            = { version = "4", features = ["axum_extras"] }
argon2            = { version = "0.5", features = ["password-hash"] }
rand              = { version = "0.8", features = ["std_rng"] }
async-trait       = "0.1"
notify            = "6"
prometheus        = { version = "0.13", default-features = false, features = ["process"] }
dashmap           = "6"
cron              = "0.12"
icalendar         = { version = "0.16", default-features = false, features = ["parser"] }

[dependencies]
hc-broker      = { path = "crates/hc-broker" }
hc-mqtt-client = { path = "crates/hc-mqtt-client" }
hc-state       = { path = "crates/hc-state" }
hc-core        = { path = "crates/hc-core" }
hc-auth        = { path = "crates/hc-auth" }
hc-api         = { path = "crates/hc-api" }
hc-types       = { path = "crates/hc-types" }
hc-topic-map   = { path = "crates/hc-topic-map" }
hc-notify      = { path = "crates/hc-notify" }
hc-logging     = { path = "crates/hc-logging" }
ipnet              = { workspace = true }
tokio              = { workspace = true }
serde              = { workspace = true }
toml               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
serde_json         = { workspace = true }
rumqttc            = { workspace = true }
rand               = { workspace = true }
# UDS admin listener — axum 0.7's serve() doesn't accept UnixListener,
# so we serve HTTP/1.1 directly on Unix sockets via hyper-util.
hyper              = { version = "1", features = ["server", "http1"] }
hyper-util         = { version = "0.1", features = ["tokio", "server-auto"] }
tower              = { version = "0.5", features = ["util"] }
tower-service      = "0.3"
nix                = { version = "0.29", features = ["user"] }

[dev-dependencies]
tempfile = "3"
