[package]
name        = "homecore"
version     = "0.1.5"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "Home automation platform — MQTT-native, API-first, fully local"
repository  = "https://github.com/homeCore-io/homeCore"

[workspace]
resolver = "2"
members = [
    "crates/hc-types",
    "crates/hc-broker",
    "crates/hc-mqtt-client",
    "crates/hc-topic-map",
    "crates/hc-core",
    "crates/hc-state",
    "crates/hc-api",
    "crates/hc-web-admin",
    "crates/hc-auth",
    "crates/hc-api-types",
    "crates/hc-cli",
    "crates/hc-scripting",
    "crates/hc-notify",
    "crates/hc-logging",
    "crates/hc-influx",
    "crates/hc-time",
]

[workspace.dependencies]
# HTTP client. Used by hc-core (CallService / RunScript http_get) and by hc-api's
# media-art proxy. rustls rather than native-tls so the musl/alpine images build
# without OpenSSL.
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio             = { version = "1", features = ["full"] }
rumqttd           = "0.20"
rumqttc           = "0.25"
axum              = { version = "0.7", features = ["ws"] }
redb              = "2"
rusqlite          = { version = "0.31", features = ["bundled"] }
rhai              = { version = "1", features = ["sync"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
uuid              = { version = "1", features = ["v4", "serde"] }
chrono            = { version = "0.4", features = ["serde"] }
chrono-tz         = "0.9"
anyhow            = "1"
thiserror         = "1"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender   = "0.2"
ipnet              = { version = "2", features = ["serde"] }
jsonschema        = "0.18"
toml              = "0.8"
ron               = "0.8"
utoipa            = { version = "4", features = ["axum_extras"] }
# Derives the rule vocabulary from the rule types. See hc-types' `schema` feature.
schemars          = { version = "0.8", features = ["chrono", "uuid1"] }
argon2            = { version = "0.5", features = ["password-hash"] }
rand              = { version = "0.8", features = ["std_rng"] }
async-trait       = "0.1"
notify            = "6"
prometheus        = { version = "0.13", default-features = false, features = ["process"] }
dashmap           = "6"
cron              = "0.12"
icalendar         = { version = "0.16", default-features = false, features = ["parser"] }

# Size-optimized release profile. Applies workspace-wide.
# Strip removes debug symbols (~30-50% binary size reduction).
# thin LTO catches cross-crate inlining without the build-time cost of
# fat LTO. codegen-units=1 enables better inlining; trade compile time
# for runtime + size. panic=unwind kept (default) so async tasks can
# unwind cleanly under tokio without killing the whole daemon.
[profile.release]
strip         = "symbols"
lto           = "thin"
codegen-units = 1

[dependencies]
hc-broker      = { path = "crates/hc-broker" }
hc-mqtt-client = { path = "crates/hc-mqtt-client" }
hc-state       = { path = "crates/hc-state" }
hc-core        = { path = "crates/hc-core" }
hc-auth        = { path = "crates/hc-auth" }
hc-api         = { path = "crates/hc-api" }
hc-types       = { path = "crates/hc-types" }
hc-topic-map   = { path = "crates/hc-topic-map" }
hc-notify      = { path = "crates/hc-notify" }
hc-logging     = { path = "crates/hc-logging" }
hc-influx      = { path = "crates/hc-influx" }
hc-time        = { path = "crates/hc-time" }
ipnet              = { workspace = true }
tokio              = { workspace = true }
serde              = { workspace = true }
toml               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
serde_json         = { workspace = true }
rumqttc            = { workspace = true }
rand               = { workspace = true }
# UDS admin listener — axum 0.7's serve() doesn't accept UnixListener,
# so we serve HTTP/1.1 directly on Unix sockets via hyper-util.
hyper              = { version = "1", features = ["server", "http1"] }
hyper-util         = { version = "0.1", features = ["tokio", "server-auto"] }
tower              = { version = "0.5", features = ["util"] }
tower-service      = "0.3"
nix                = { version = "0.29", features = ["user"] }

[dev-dependencies]
tempfile = "3"
hc-cli        = { path = "crates/hc-cli" }
hc-api-types  = { path = "crates/hc-api-types" }
nix           = { version = "0.29", features = ["user"] }
# Phase 2a streaming conformance. hc-captest is a sibling plugin crate
# (own workspace); we consume its library form from streaming_test.rs
# to drive the SDK end-to-end without a subprocess.
hc-captest    = { git = "https://github.com/homeCore-io/hc-captest", branch = "main" }
plugin-sdk-rs = { git = "https://github.com/homeCore-io/hc-plugin-sdk-rs", branch = "main" }
# HTTP client for streaming tests — needed for raw status code / body
# assertions that hc-cli's bail-on-non-2xx wrapper would swallow.
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio-stream  = "0.1"

# ---------------------------------------------------------------------------
# Cross-repo dep unification
#
# hc-captest (git dep, dev-only) transitively depends on hc-types/hc-logging
# from homeCore-io/homeCore. Without this patch, cargo would resolve those
# as a separate copy of the crates from the git source and the in-workspace
# copy from `crates/`, producing E0308 'expected hc_types::Capabilities,
# found Capabilities' in streaming_test.rs.
#
# Path is relative to this Cargo.toml — the workspace crates always exist
# in any homeCore-io/homeCore checkout, so the patch works in standalone CI
# as well as in the meta-layout.
# ---------------------------------------------------------------------------
[patch."https://github.com/homeCore-io/homeCore"]
hc-types     = { path = "crates/hc-types" }
hc-logging   = { path = "crates/hc-logging" }
hc-api-types = { path = "crates/hc-api-types" }
hc-auth      = { path = "crates/hc-auth" }
hc-time      = { path = "crates/hc-time" }
