[package]
name = "homecore"
version = "0.1.0"
edition = "2021"

[dependencies]
hc-broker      = { path = "../crates/hc-broker" }
hc-mqtt-client = { path = "../crates/hc-mqtt-client" }
hc-state       = { path = "../crates/hc-state" }
hc-core        = { path = "../crates/hc-core" }
hc-auth        = { path = "../crates/hc-auth" }
hc-api         = { path = "../crates/hc-api" }
hc-types       = { path = "../crates/hc-types" }
hc-topic-map   = { path = "../crates/hc-topic-map" }
hc-notify      = { path = "../crates/hc-notify" }
hc-logging     = { path = "../crates/hc-logging" }
ipnet          = { workspace = true }
tokio          = { workspace = true }
serde          = { workspace = true }
toml           = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
serde_json         = { workspace = true }
rumqttc            = { workspace = true }

[dev-dependencies]
# (test deps are already in [dependencies] for this binary crate)
