[package]
name    = "hc-api"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
axum       = { workspace = true }
tokio      = { workspace = true }
# Outbound fetch for the media-art proxy (see handlers::device_media_art).
reqwest    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
utoipa     = { workspace = true }
hc-types   = { path = "../hc-types", features = ["schema"] }
hc-state   = { path = "../hc-state" }
hc-core    = { version = "0.1.0", path = "../hc-core" }
hc-time    = { path = "../hc-time" }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
uuid = { workspace = true, features = ["v4", "serde"] }
hc-auth = { version = "0.1.0", path = "../hc-auth" }
hc-api-types = { path = "../hc-api-types" }
chrono = { workspace = true, features = ["serde"] }
hc-mqtt-client = { version = "0.1.0", path = "../hc-mqtt-client" }
hc-scripting = { version = "0.1.0", path = "../hc-scripting" }
hc-topic-map = { version = "0.1.0", path = "../hc-topic-map" }
hc-web-admin = { version = "0.1.0", path = "../hc-web-admin" }
async-trait  = { workspace = true }
hc-logging   = { version = "0.1.0", path = "../hc-logging" }
ipnet        = { workspace = true }
toml         = { workspace = true }
toml_edit    = "0.22"
ron          = { workspace = true }
prometheus   = { workspace = true }
zip          = { version = "2", default-features = false, features = ["deflate"] }
hyper        = { version = "1", features = ["server", "http1"] }
hyper-util   = { version = "0.1", features = ["tokio", "server-auto"] }
tower        = { version = "0.5", features = ["util"] }
nix          = { version = "0.29", features = ["user", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
tower        = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile     = "3"
