[package]
name    = "hc-auth"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
hc-types   = { path = "../hc-types" }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
bcrypt = "0.19.0"
argon2     = { workspace = true }
rand_core  = { version = "0.6", features = ["getrandom"] }
base64     = "0.22"
uuid       = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
