[package]
name    = "hc-influx"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "InfluxDB v2 metrics exporter for homeCore device state"

[dependencies]
hc-types        = { path = "../hc-types" }
anyhow          = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
tracing         = { workspace = true }
tokio           = { workspace = true }
chrono          = { workspace = true }
reqwest         = { version = "0.13.2", default-features = false, features = ["rustls"] }
