[package]
name    = "hc-logging"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tracing            = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender   = "0.2"
flate2             = "1"
serde              = { workspace = true }
serde_json         = { workspace = true }
anyhow             = { workspace = true }
chrono             = { workspace = true }
tokio              = { workspace = true }
hc-types           = { path = "../hc-types" }
hc-time            = { path = "../hc-time" }
