[package]
name    = "hc-notify"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow     = { workspace = true }
async-trait = { workspace = true }
serde      = { workspace = true }
tracing    = { workspace = true }
tokio      = { workspace = true }
reqwest    = { version = "0.13.2", features = ["json"] }
lettre     = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
