[package]
name    = "hc-notify"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow     = { workspace = true }
async-trait = { workspace = true }
serde      = { workspace = true }
tracing    = { workspace = true }
tokio      = { workspace = true }
reqwest    = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
lettre     = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname", "pool"] }
