[package]
name    = "hc-scripting"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rhai       = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true }
hc-types   = { path = "../hc-types" }
hc-time    = { path = "../hc-time" }
