[package]
name    = "hc-state"
version = "0.1.0"
edition = "2021"

[dependencies]
redb       = { workspace = true }
rusqlite   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
hc-types   = { path = "../hc-types" }
hc-auth    = { path = "../hc-auth" }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
