[package]
name    = "hc-state"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
redb       = { workspace = true }
rusqlite   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
hc-types   = { path = "../hc-types" }
hc-auth    = { path = "../hc-auth" }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
tempfile = "3"
