[workspace]

[package]
name = "hc-sonos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hc-sonos"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1", features = ["full"] }
rumqttc            = "0.24"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-appender   = "0.2"
sonor              = "2.0"
futures            = "0.3"
