[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "homecore-plugin-sdk"
version     = "0.1.0"
description = "Python SDK for HomeCore device plugins"
readme      = "README.md"
requires-python = ">=3.11"
license     = { text = "MIT" }

dependencies = [
    "paho-mqtt>=2.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["."]
include = ["homecore_plugin_sdk*"]
