[package]
name    = "plugin-sdk-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rumqttc    = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
chrono     = { workspace = true }
toml       = { workspace = true }
hc-types   = { path = "../../crates/hc-types" }
hc-logging = { version = "0.1.0", path = "../../crates/hc-logging" }
