[package]
name    = "http-poller"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "http-poller"
path = "src/main.rs"

[dependencies]
plugin-sdk-rs      = { path = "../../../../sdks/plugin-sdk-rs" }
tokio              = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
rhai               = { workspace = true }
reqwest            = { version = "0.13.2", features = ["json"] }
