[package]
name    = "virtual-device"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "virtual-device"
path = "src/main.rs"

[dependencies]
plugin-sdk-rs = { path = "../../../../sdks/hc-plugin-sdk-rs" }
tokio         = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json    = { workspace = true }
